test/fail/suggest-local-type-ai.mo
//MOC-FLAG --ai-errors
type Foo = Int;
type Zap = [Fo];
